@@ -1557,7 +1557,7 @@ app.use(cspHeader, (req, res, next) => {
   });
 
   const appContext = {
-    authMode: Auth.mode,
+    logoutUrl: Auth.logoutUrl,
     nonce: res.locals.nonce,
     version: version.version
   };
